feat and tests(canceling): maybe need more tests